ft_containers-unit-test/logs.txt
../utilities_tests/equal.cpp:7:6: error: no member named 'equal' in namespace 'ft'
        if (_equal(s.begin(), s.begin() + s.size()/2, s.rbegin()) == 1)
            ^~~~~~
../utilities_tests/../system/../../config.hpp:29:23: note: expanded from macro '_equal'
#define _equal                          ft::equal
                                        ~~~~^
1 error generated.
